<resources>
    <string name="app_name">Petagram</string>
    <string name="name_pet">Name</string>
    <string name="rating">5</string>
    <string name="like">Le has dado me gusta a</string>
    <string name="un_like">Le has quitado me gusta a</string>
    <string name="about">Acerca de</string>
    <string name="contact">Contacto</string>
    <string name="favourite">Favoritos</string>
    <string name="developer">Desarrollador</string>
    <string name="name_developer">Baldomero Napoli</string>
    <string name="skils">Habilidades: PHP, Java, Mysql, AWS, Android, Javascript</string>
    <string name="gitHubDeveloper">GitHub: https://github.com/elnapoli</string>
    <string name="name">Nombre</string>
    <string name="email">Correo Electrónico</string>
    <string name="titleContact">Ingrese datos de contacto</string>
    <string name="sendEmail">Enviar Email</string>
    <string name="content_message">Mensaje</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
