<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/margin_30"
    android:paddingLeft="@dimen/margin_30"
    android:paddingRight="@dimen/margin_30"
    tools:context="com.example.elnapoli.petoperation.activities.AboutActivity">
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/title"
            android:layout_marginBottom="@dimen/margin_30"
            android:text="@string/developer" />

        <TextView
            android:id="@+id/tvName"
            android:textSize="@dimen/name_developer"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/name_developer" />
        <TextView
            android:id="@+id/tvSkils"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/skils" />
        <TextView
            android:id="@+id/tvGit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gitHubDeveloper" />
    </android.support.v7.widget.LinearLayoutCompat>


</android.support.constraint.ConstraintLayout>
